fixed html to jquery commands

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <!-- This is where we will have our random # -->
         </section>
         <aside>
-            <h4 id="wins"> Wins:   </h4>
-            <h4 id="losses"> Losses: </h4>
+            <h4 id="wins"> Wins: 0  </h4>
+            <h4 id="losses"> Losses: 0 </h4>
         </aside>
     </div>
     <div id="bigButton">
