--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="Assets/javascript/game.js"></script>
-<link rel="stylesheet" type="text/css" href="Assets/css/reset.css">
-<link rel="stylesheet" type="text/css" href="Assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 <body>
     <!-- DONT FORGET TO RELATIVE TO BOTH CSS/JQUERY/JS/BOOTSTRAP -->
@@ -15,9 +15,9 @@
         <h1> CRYSTAL COLLECTOR! </h1>
     </div>
     <div id="pdiv">
-        <p> You will be given a random nubmer at the start of the game</p>
+        <p> You will be given a random number at the start of the game</p>
         <p> There are four crystals below. By clicking on a crystal you will add a specific amount to your total score.</p>
-        <p> You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.</p>
+        <p> You win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.</p>
         <p> The value of each crystal is hidden from you until you click on it. </p>
         <p> Each time when the game starts the game will change the value of each crystal.</p>
     </div>
