--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>DAN'S CRYSTAL COLLECTOR GAME</title>
 </head>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script src="Assets/javascript/game.js"></script>
+<script src="assets/javascript/game.js"></script>
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
